# sdl2-template

./: CMakeLists.txt  compile_commands.json
src/: game_main.cpp  game_main.h  main.cpp
